[tool.poetry]
name = "channel_bot"
version = "0.0.1"
description = "Telegram channels in one place"
authors = ["Nikita Churikov <nikita@chur.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Telethon = "^1.10.9"
loguru = "^0.4.0"
dependencies = "^0.15"
pymongo = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
