[tool.poetry]
name = "channel_bot"
version = "0.1.1"
description = "Telegram channels in one place"
authors = ["Nikita Churikov <nikita@chur.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Telethon = "^1.10.9"
loguru = "^0.4.0"
dependencies = "^0.15"
pymongo = "^3.10.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
mongomock = "^3.18.0"

[tool.poetry.scripts]
run_channel_bot = 'channel_bot.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
